[package]
name = "hurlalot"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", features = ["json", "http2", "uuid"] }
shuttle-rocket = "0.38"
shuttle-runtime = "0.38"
tokio = "1.36.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }