[package]
name = "tbtt"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", features = ["json", "http2", "uuid"] }
shuttle-rocket = "0.38.0"
shuttle-runtime = "0.38.0"
tokio = "1.36.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
libsql = { version = "0.2.0" }
url = "2.5.0"
libsql-client = "0.33.4"

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
